<resources>
    <string name="app_name">AdemApp</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="achievement">Achievement</string>
    <string name="search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="sholat_lock">Sholat Lock</string>
    <string name="notifications">Notifications</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="info_icon">Info Icon</string>
    <string name="info_app">"Adem adalah aplikasi dakwah multifungsi yang memiliki fitur-fitur unik.\nUntuk mengetahui adem lebih lanjut klik tonton video pada tautan berikut ini:\n"</string>
    <string name="link_app">bit.ly/ADEMMOBILE_MTQMN2019</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="challenge">Challenge</string>
    <string name="teman">Teman</string>
    <string name="poin">Poin</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="delete_profile_picture">Delete Profile Picture</string>
    <string name="save">Save</string>
    <string name="mode">Mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kalender">Kalender</string>
    <string name="image_profile">Image Profile</string>
</resources>
