<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_lock"
            android:icon="@drawable/lock"
            android:title="@string/sholat_lock" />
        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/notif"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>

</menu>
