<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditProfileActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorTextBlack"
            android:background="@color/colorText">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profpic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/change_pic"
                android:contentDescription="@string/image_profile"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_profpic"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="16sp"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">
                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="16sp"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_username"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_email"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp">
                <EditText
                    android:id="@+id/et_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:maxLines="2"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="16sp"
                    android:inputType="textLongMessage"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_below="@id/til_bio"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/buttonwhite"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorText" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>